# stockviz

./: Readme.md  devJournal.md
backendFastapi/: .gitignore  README.md  pyproject.toml  test.py
backendFastapi/analyse/: duckdb_analyse.ipynb  price_analyse.ipynb
backendFastapi/app/: Readme.md  main.py  stockScanner.code-workspace
backendFastapi/app/core/: __init__.py  constants.py
backendFastapi/app/data_aquisition/: __init__.py  csv_client.py  db_client.py  yahoo_client.py
backendFastapi/app/data_procesing/: __init__.py  data_cleaner.py  metrics_data_calculator.py  metrics_data_calculator_cn.py
backendFastapi/app/data_procesing/cleaning_strategies/: __init__.py  balance_sheet_clean_strategy.py  base_clean_strategy.py
backendFastapi/app/database/: __init__.py  duckdb_manager.py  scripts.py
backendFastapi/app/models/: __init__.py  fundamental_model.py
backendFastapi/app/services/: __init__.py
backendFastapi/app/services/fundamental/: CSVImportStatusDatabaseService.py  FinancialAnalysisFacade.py
backendFastapi/app/services/price/: priceService.py
backendFastapi/app/utils/: __init__.py  french_stock_service.py  info.json
backendFastapi/app/utils/logger/: config.py  logger.py
backendFastapi/app/utils/rowManager/: __init__.py  rowManager.py
backendFastapi/data/: main.duckdb
frontendAngular/: .gitignore  README.md  angular.json  openapi-config.json  package-lock.json  package.json  tailwind.config.js
frontendAngular/src/: index.html  styles.scss
frontendAngular/src/app/: app.component.ts  app.config.ts  app.routes.ts
(+33 files in other folders)
